--- a/ResumeProject/Views/Default/Index.cshtml
+++ b/ResumeProject/Views/Default/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     Layout = null;
 }
 
@@ -7,69 +6,101 @@
 <html lang="en">
 
 @await Component.InvokeAsync("_DefaultHeadComponentPartial")
+<head>
+    <!-- Vegas CSS -->
+    <link rel="stylesheet" href="/templates/html/assets/vendor/vegas/vegas.css">
+</head>
 
 <body class="slideshow-zoom-background">
 
-	<div id="preloader" class="preloader">
-		<div class="loader-status">
-			<div class="spinner"></div>
-		</div>
-	</div>
+    <div id="preloader" class="preloader">
+        <div class="loader-status">
+            <div class="spinner"></div>
+        </div>
+    </div>
 
-	<div class="site-container">
+    <div class="site-container">
 
-		<div id="top"></div>
+        <div id="top"></div>
 
-		<!-- Mobile logo -->
-		<a href="#" class="mobile-logo mobile-logo-light bg-dark">
-			<span>Amanda Malat</span>
-		</a>
+        <!-- Mobile logo -->
+        <a href="#" class="mobile-logo mobile-logo-light bg-dark">
+            <span></span>
+        </a>
 
-		<!-- Navigation toggle -->
-		<button type="button" id="navigation-toggle" class="nav-toggle nav-toggle-light bg-dark">
-			<span></span>
-		</button>
+        <!-- Navigation toggle -->
+        <button type="button" id="navigation-toggle" class="nav-toggle nav-toggle-light bg-dark">
+            <span></span>
+        </button>
 
-		@await Component.InvokeAsync("_DefaultHeaderComponentPartial")
+        @await Component.InvokeAsync("_DefaultHeaderComponentPartial")
 
-		<!-- Header overlay -->
-		<div class="header-overlay">
-			<div class="overlay-inner bg-dark opacity-80"></div>
-		</div>
+        <!-- Header overlay -->
+        <div class="header-overlay">
+            <div class="overlay-inner bg-dark opacity-80"></div>
+        </div>
 
-		<!-- Back to top button -->
-		<button type="button" id="backtotop" class="btn btn-primary btn-icon">
-			<span class="btn-icon-inner fas fa-angle-up"></span>
-		</button>
+        <!-- Back to top button -->
+        <button type="button" id="backtotop" class="btn btn-primary btn-icon">
+            <span class="btn-icon-inner fas fa-angle-up"></span>
+        </button>
 
-		<!-- Page wrapper -->
-		<div class="page-wrapper">
-			@await Component.InvokeAsync("_DefaultFeatureComponentPartial")
+        <!-- Page wrapper -->
+        <div class="page-wrapper">
+            @await Component.InvokeAsync("_DefaultFeatureComponentPartial")
 
-			<div class="page-content">
+            <div class="page-content">
 
-				@await Component.InvokeAsync("_DefaultAboutComponentPartial")
+                @await Component.InvokeAsync("_DefaultAboutComponentPartial")
 
-				@await Component.InvokeAsync("_DefaultSkillComponentPartial")
+                @await Component.InvokeAsync("_DefaultSkillComponentPartial")
 
-				@await Component.InvokeAsync("_DefaultExperienceComponentPartial")
+                @await Component.InvokeAsync("_DefaultExperienceComponentPartial")
 
-				@await Component.InvokeAsync("_DefaultServiceComponentPartial")
+                @await Component.InvokeAsync("_DefaultServiceComponentPartial")
 
-				@await Component.InvokeAsync("_DefaultPortfolioComponentPartial")
+                @await Component.InvokeAsync("_DefaultPortfolioComponentPartial")
 
-				@await Component.InvokeAsync("_DefaultTestimonialComponentPartial")
-	
-				@await Component.InvokeAsync("_DefaultContactComponentPartial")
+                @await Component.InvokeAsync("_DefaultTestimonialComponentPartial")
 
-				@await Component.InvokeAsync("_DefaultFooterComponentPartial")
+                @await Component.InvokeAsync("_DefaultContactComponentPartial")
 
-			</div><!--end .page-content -->
-		</div><!-- end .page-wrapper -->
+                @await Component.InvokeAsync("_DefaultFooterComponentPartial")
 
-	</div>
+            </div><!--end .page-content -->
+        </div><!-- end .page-wrapper -->
 
-	@await Component.InvokeAsync("_DefaultScriptsComponentPartial")
+    </div>
+
+    <!-- jQuery -->
+    <script src="/templates/html/assets/vendor/jquery/dist/jquery.min.js"></script>
+    
+    <!-- Vegas JS -->
+    <script src="/templates/html/assets/vendor/vegas/vegas.min.js"></script>
+
+    
+    @await Component.InvokeAsync("_DefaultScriptsComponentPartial")
+
+    <!-- Vegas Background Slideshow -->
+    <script>
+        $(document).ready(function() {
+            $('#page-cover').vegas({
+                overlay: true,
+                slides: [
+                    { src: '/images/slider/slide-1.jpg' },
+                    { src: '/images/slider/slide-2.jpg' },
+                    { src: '/images/slider/slide-3.jpg' }
+                    
+                ],
+                transition: 'fade',
+                transitionDuration: 2000,
+                delay: 5000,
+                autoplay: true,
+                cover: true,
+                shuffle: false
+            });
+        });
+    </script>
 
 </body>
 </html>
