--- a/ResumeProject/Views/Shared/Components/_DefaultFeatureComponentPartial/Default.cshtml
+++ b/ResumeProject/Views/Shared/Components/_DefaultFeatureComponentPartial/Default.cshtml
@@ -1,22 +1,22 @@
-﻿<div id="page-cover" class="page-cover">
+﻿@model ResumeProject.Entities.About
+
+<div id="page-cover" class="page-cover" data-bg-slideshow>
 	<div class="page-cover-wrapper-fixed">
 		<div class="page-cover-bg">
 			<div class="overlay-inner bg-dark opacity-55"></div>
 		</div>
 		<div class="page-cover-wrap">
-
 			<section id="home" class="d-flex min-vh-100">
 				<div class="container align-self-center text-white text-center">
 					<div class="avatar avatar-xxl mb-6">
 						<div class="avatar-shape avatar-shape-rounded bg-white mt-n2 mb-n2 mr-n2"></div>
-						<img src="demo/images/avatar_small.jpg" alt="" class="avatar-img rounded-circle shadow-light">
+						<img src="@Model.ImageUrl" alt="" class="avatar-img rounded-circle shadow-light">
 					</div>
-					<h1 class="mb-2 mb-lg-3">Amanda Malat</h1>
-					<p class="lead mb-0">UI/UX Designer</p>
-					<span class="cover-letter letter-xl text-white opacity-10">A</span>
+					<h1 class="mb-2 mb-lg-3">@Model.NameSurname</h1>
+					<p class="lead mb-0">@Model.Title</p>
+					<span class="cover-letter letter-xl text-white opacity-10">@Model.NameSurname.Substring(0, 1)</span>
 				</div>
 			</section>
-
 		</div>
 	</div>
 </div><!--end .page-cover -->
