--- a/ResumeProject/Views/Shared/Components/_DefaultScriptsComponentPartial/Default.cshtml
+++ b/ResumeProject/Views/Shared/Components/_DefaultScriptsComponentPartial/Default.cshtml
@@ -16,4 +16,4 @@
 <script src="/templates/html/assets/vendor/granim.js/dist/granim.min.js"></script>
 
 <!-- Theme JS -->
-<script src="/templates/html/assets/js/main.js"></script>
+<script src="~/templates/html/assets/js/main.js"></script>
