--- a/ResumeProject/Views/Experience/ExperienceList.cshtml
+++ b/ResumeProject/Views/Experience/ExperienceList.cshtml
@@ -5,8 +5,8 @@
     Layout = "~/Views/Admin/Index.cshtml";
 }
 
-<div class="flex-1 overflow-y-auto p-8">
-    <div class="max-w-6xl mx-auto space-y-8">
+<div class="flex-1 p-8">
+    <div class="w-full space-y-8">
         <!-- Page Heading -->
         <div class="flex flex-col sm:flex-row sm:items-center justify-between gap-4">
             <div>
