--- a/ResumeProject/Views/Shared/Components/_DefaultFooterComponentPartial/Default.cshtml
+++ b/ResumeProject/Views/Shared/Components/_DefaultFooterComponentPartial/Default.cshtml
@@ -4,25 +4,16 @@
 		<nav class="mb-3">
 			<ul class="list-inline text-center">
 				<li class="list-inline-item">
-					<a class="btn btn-sm btn-icon btn-outline-dark border-0 rounded-circle" href="#">
-						<span class="btn-icon-inner fab fa-facebook-f"></span>
+					<a class="btn btn-sm btn-icon btn-outline-dark border-0 rounded-circle" target="_blank" href="https://www.linkedin.com/in/devozkanyilmaz/">
+						<span class="btn-icon-inner fab fa-linkedin"></span>
 					</a>
 				</li>
 				<li class="list-inline-item">
-					<a class="btn btn-sm btn-icon btn-outline-dark border-0 rounded-circle" href="#">
-						<span class="btn-icon-inner fab fa-instagram"></span>
+					<a class="btn btn-sm btn-icon btn-outline-dark border-0 rounded-circle" target="_blank" href="https://github.com/ozkanyllmaz">
+						<span class="btn-icon-inner fab fa-github"></span>
 					</a>
 				</li>
-				<li class="list-inline-item">
-					<a class="btn btn-sm btn-icon btn-outline-dark border-0 rounded-circle" href="#">
-						<span class="btn-icon-inner fab fa-twitter"></span>
-					</a>
-				</li>
-				<li class="list-inline-item">
-					<a class="btn btn-sm btn-icon btn-outline-dark border-0 rounded-circle" href="#">
-						<span class="btn-icon-inner fab fa-pinterest"></span>
-					</a>
-				</li>
+				
 			</ul>
 		</nav>
 		<p class="text-center">© @DateTime.Now.Year - Tüm hakları saklıdır</p>
