--- a/ResumeProject/Views/Shared/Components/_DefaultHeadComponentPartial/Default.cshtml
+++ b/ResumeProject/Views/Shared/Components/_DefaultHeadComponentPartial/Default.cshtml
@@ -27,4 +27,5 @@
 	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 
+	<link rel="stylesheet" href="/assets/vendor/vegas/vegas.min.css">
 </head>
