--- a/ResumeProject/Views/Shared/Components/_DefaultHeaderComponentPartial/Default.cshtml
+++ b/ResumeProject/Views/Shared/Components/_DefaultHeaderComponentPartial/Default.cshtml
@@ -18,13 +18,19 @@
 					<a href="#about" class="scrollto">Hakkımda</a>
 				</li>
 				<li>
+					<a href="#skills" class="scrollto">Yeteneklerim&Teknolojiler</a>
+				</li>
+				<li>
+					<a href="#experience" class="scrollto">Deneyimlerim</a>
+				</li>
+				<li>
 					<a href="#services" class="scrollto">Hizmetlerim</a>
 				</li>
 				<li>
 					<a href="#portfolio" class="scrollto">Projelerim</a>
 				</li>
 				<li>
-					<a href="#news" class="scrollto">Deneyimlerim</a>
+					<a href="#testimonial" class="scrollto">Referanslarım</a>
 				</li>
 				<li>
 					<a href="#contact" class="scrollto">Bana Yazın</a>
@@ -34,24 +40,15 @@
 		<div class="nav-divider my-8"></div>
 		<nav>
 			<ul class="list-inline text-center">
+				
 				<li class="list-inline-item">
-					<a class="btn btn-sm btn-icon btn-outline-white border-0 rounded-circle" href="#">
-						<span class="btn-icon-inner fab fa-facebook-f"></span>
+					<a class="btn btn-sm btn-icon btn-outline-white border-0 rounded-circle" target="_blank" href="https://www.linkedin.com/in/devozkanyilmaz/">
+						<span class="btn-icon-inner fab fa-linkedin"></span>
 					</a>
 				</li>
 				<li class="list-inline-item">
-					<a class="btn btn-sm btn-icon btn-outline-white border-0 rounded-circle" href="#">
-						<span class="btn-icon-inner fab fa-instagram"></span>
-					</a>
-				</li>
-				<li class="list-inline-item">
-					<a class="btn btn-sm btn-icon btn-outline-white border-0 rounded-circle" href="#">
-						<span class="btn-icon-inner fab fa-twitter"></span>
-					</a>
-				</li>
-				<li class="list-inline-item">
-					<a class="btn btn-sm btn-icon btn-outline-white border-0 rounded-circle" href="#">
-						<span class="btn-icon-inner fab fa-pinterest"></span>
+					<a class="btn btn-sm btn-icon btn-outline-white border-0 rounded-circle" target="_blank" href="https://github.com/ozkanyllmaz">
+						<span class="btn-icon-inner fab fa-github"></span>
 					</a>
 				</li>
 			</ul>
