--- a/ResumeProject/Views/Shared/Components/_DefaultServiceComponentPartial/Default.cshtml
+++ b/ResumeProject/Views/Shared/Components/_DefaultServiceComponentPartial/Default.cshtml
@@ -6,9 +6,9 @@
             <div class="col-lg-10 col-xl-8 mx-lg-auto text-center">
                 <div class="section-title h2 mb-3">
                     <h2 class="mb-0">Hizmetlerim</h2>
-                    <span class="title-letter">S</span>
+                    <span class="title-letter">H</span>
                 </div>
-                <p>Fusce massa dolor, mattis sed ultrices ut, placerat ut leo. Donec sed fringilla lectus, non vulputate orci. Integer id libero euismod, interdum ligula vel, porttitor magna. Sed euismod maximus finibus.</p>
+                <p>Modern yazılım mimarileri ve güncel teknolojileri kullanarak, ihtiyaçlarınıza özel, ölçeklenebilir ve güvenli backend çözümleri sunuyorum. Performans, temiz kod ve sürdürülebilirlik odaklı yaklaşımımla projelerinizin teknik altyapısını sağlam temellere oturtuyorum.</p>
             </div>
         </div>
         <div class="row my-n2 mx-sm-n2">
