--- a/ResumeProject/wwwroot/templates/html/dark-nav-home-1-slideshow-zoom-background.html
+++ b/ResumeProject/wwwroot/templates/html/dark-nav-home-1-slideshow-zoom-background.html
@@ -88,23 +88,14 @@
 					<div class="nav-divider my-8"></div>
 					<nav>
 						<ul class="list-inline text-center">
+							
 							<li class="list-inline-item">
-								<a class="btn btn-sm btn-icon btn-outline-white border-0 rounded-circle" href="#">
-									<span class="btn-icon-inner fab fa-facebook-f"></span>
+								<a class="btn btn-sm btn-icon btn-outline-white border-0 rounded-circle" href="https://github.com/ozkanyllmaz">
+									<span class="btn-icon-inner fab fa-github"></span>
 								</a>
 							</li>
 							<li class="list-inline-item">
-								<a class="btn btn-sm btn-icon btn-outline-white border-0 rounded-circle" href="#">
-									<span class="btn-icon-inner fab fa-instagram"></span>
-								</a>
-							</li>
-							<li class="list-inline-item">
-								<a class="btn btn-sm btn-icon btn-outline-white border-0 rounded-circle" href="#">
-									<span class="btn-icon-inner fab fa-twitter"></span>
-								</a>
-							</li>
-							<li class="list-inline-item">
-								<a class="btn btn-sm btn-icon btn-outline-white border-0 rounded-circle" href="#">
+								<a class="btn btn-sm btn-icon btn-outline-white border-0 rounded-circle" href="https://www.linkedin.com/in/devozkanyilmaz/">
 									<span class="btn-icon-inner fab fa-pinterest"></span>
 								</a>
 							</li>
@@ -542,41 +533,6 @@
 											</blockquote>
 										</div>
 
-										<div>
-											<div class="icon icon-5x mb-8">
-												<i class="fa fa-quote-right"></i>
-											</div>
-											<blockquote>
-												<p class="mb-5">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-												<footer class="d-flex justify-content-center align-items-center w-lg-50 mx-auto text-left">
-																										<div class="avatar">
-														<img src="demo/images/avatar_small.jpg" alt="" class="avatar-img rounded-circle shadow-dark">
-													</div>
-													<div class="ml-5">
-														<h4 class="h6 mb-0">Jessica Nelson</h4>
-														<small class="d-block">Director Business Planning, Amazon</small>
-													</div>
-												</footer>
-											</blockquote>
-										</div>
-
-										<div>
-											<div class="icon icon-5x mb-8">
-												<i class="fa fa-quote-right"></i>
-											</div>
-											<blockquote>
-												<p class="mb-5">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-												<footer class="d-flex justify-content-center align-items-center w-lg-50 mx-auto text-left">
-																										<div class="avatar">
-														<img src="demo/images/avatar_small.jpg" alt="" class="avatar-img rounded-circle shadow-dark">
-													</div>
-													<div class="ml-5">
-														<h4 class="h6 mb-0">Jessica Nelson</h4>
-														<small class="d-block">Director Business Planning, Amazon</small>
-													</div>
-												</footer>
-											</blockquote>
-										</div>
 									</div>
 								</div>
 							</div>
